--- a/contact.html
+++ b/contact.html
@@ -137,30 +137,31 @@
                     <div class="card shadow">
                         <div class="card-body p-5">
                             <h3 class="text-center mb-4">فرم تماس با ما</h3>
-                            <form id="contactForm">
+                            <form id="contactForm" name="contact" method="POST" data-netlify="true">
+                                <input type="hidden" name="form-name" value="contact">
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="name" class="form-label">نام و نام خانوادگی</label>
-                                        <input type="text" class="form-control" id="name" required>
+                                        <input type="text" name="name" class="form-control" id="name" required>
                                     </div>
                                     <div class="col-md-6 mb-3">
-                                        <label for="email" class="form-label">ایمیل</label>
-                                        <input type="email" class="form-control" id="email" required>
+                                        <label for="email" class="form-label" >ایمیل</label>
+                                        <input type="email" class="form-control" name="email" id="email" required>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="phone" class="form-label">تلفن تماس</label>
-                                        <input type="tel" class="form-control" id="phone">
+                                        <input type="tel" class="form-control" name="phone" id="phone">
                                     </div>
                                     <div class="col-md-6 mb-3">
                                         <label for="company" class="form-label">نام شرکت</label>
-                                        <input type="text" class="form-control" id="company">
+                                        <input type="text" class="form-control" name="company" id="company">
                                     </div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="subject" class="form-label">موضوع</label>
-                                    <select class="form-select" id="subject" required>
+                                    <select class="form-select" id="subject" name="choice" required>
                                         <option value="" selected disabled>انتخاب موضوع</option>
                                         <option value="product">استعلام محصول</option>
                                         <option value="service">درخواست خدمات</option>
@@ -171,7 +172,7 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="message" class="form-label">پیام</label>
-                                    <textarea class="form-control" id="message" rows="5" required></textarea>
+                                    <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
                                 </div>
                                 <div class="text-center">
                                     <button type="submit" class="btn btn-primary btn-lg">ارسال پیام</button>
@@ -284,4 +285,5 @@
     <script src="js/script.js"></script>
     <script src="js/contact.js"></script>
 </body>
+
 </html>
