--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
                     <div class="card shadow">
                         <div class="card-body p-5">
                             <h3 class="text-center mb-4">فرم تماس با ما</h3>
-                            <form id="contactForm" name="contact" method="POST" data-netlify="true">
+                            <form name="contact" id="contactForm" method="POST" data-netlify="true">
                                 <input type="hidden" name="form-name" value="contact">
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
@@ -287,4 +287,5 @@
 </body>
 
 </html>
+
 
