--- a/contact.html
+++ b/contact.html
@@ -142,21 +142,21 @@
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="name" class="form-label">نام و نام خانوادگی</label>
-                                        <input type="text" name="name" class="form-control" id="name" required />
+                                        <input type="text" name="name" class="form-control" id="name" required>
                                     </div>
                                     <div class="col-md-6 mb-3">
                                         <label for="email" class="form-label" >ایمیل</label>
-                                        <input type="email" class="form-control" name="email" id="email" required />
+                                        <input type="email" class="form-control" name="email" id="email" required>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="phone" class="form-label">تلفن تماس</label>
-                                        <input type="tel" class="form-control" name="phone" id="tel" />
+                                        <input type="tel" class="form-control" name="phone" id="tel">
                                     </div>
                                     <div class="col-md-6 mb-3">
                                         <label for="company" class="form-label">نام شرکت</label>
-                                        <input type="text" class="form-control" name="company" id="company" />
+                                        <input type="text" class="form-control" name="company" id="company">
                                     </div>
                                 </div>
                                 <div class="mb-3">
@@ -287,5 +287,6 @@
 </body>
 
 </html>
+
 
 
