--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,11 @@
             </div>
         </div>
     </nav>
-
+<form name="hidden-test" netlify hidden>
+  <input type="text" name="name">
+  <input type="email" name="email">
+  <textarea name="message"></textarea>
+</form>
     <!-- هدر صفحه -->
     <header class="page-header py-5">
         <div class="container">
@@ -287,6 +291,7 @@
 </body>
 
 </html>
+
 
 
 
