--- a/contact.html
+++ b/contact.html
@@ -68,11 +68,6 @@
             </div>
         </div>
     </nav>
-<form name="hidden-test" netlify hidden>
-  <input type="text" name="name">
-  <input type="email" name="email">
-  <textarea name="message"></textarea>
-</form>
     <!-- هدر صفحه -->
     <header class="page-header py-5">
         <div class="container">
@@ -146,7 +141,7 @@
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="name" class="form-label">نام و نام خانوادگی</label>
-                                        <input type="text" name="name" class="form-control" id="name" required>
+                                        <input type="text" name="name" class="form-control"  required>
                                     </div>
                                     <div class="col-md-6 mb-3">
                                         <label for="email" class="form-label" >ایمیل</label>
@@ -291,6 +286,7 @@
 </body>
 
 </html>
+
 
 
 
