--- a/contact.html
+++ b/contact.html
@@ -136,8 +136,8 @@
                     <div class="card shadow">
                         <div class="card-body p-5">
                             <h3 class="text-center mb-4">فرم تماس با ما</h3>
-                            <form name="contact" id="contactForm" method="POST" action="petroazarasia23@gmail.com" data-netlify="true">
-                                <input type="hidden" name="form-name" value="contact">
+                            <form name="contact" id="contactForm" method="POST" data-netlify="true" onSubmit="submit">
+                                
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="name" class="form-label">نام و نام خانوادگی</label>
@@ -286,6 +286,7 @@
 </body>
 
 </html>
+
 
 
 
