--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
                     <div class="card shadow">
                         <div class="card-body p-5">
                             <h3 class="text-center mb-4">فرم تماس با ما</h3>
-                            <form name="contact" id="contactForm" method="POST" data-netlify="true" onSubmit="submit" action="/contact,html">
+                            <form name="contact" id="contactForm" method="POST" netlify onSubmit="submit" action="/contact.html">
                                 
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
@@ -221,10 +221,7 @@
                                     چگونه می‌توانم از محصولات شرکت پترو آذر آسیا خریداری کنم؟
                                 </button>
                             </h2>
-                        <!--    <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
-                                <div class="accordion-body">
-                                    برای خرید محصولات می‌توانید از طریق فرم تماس با ما درخواست خود را ثبت کنید یا با بخش فروش به شماره 09140513427 تماس حاصل فرمایید. کارشناسان ما در اسرع وقت با شما تماس خواهند گرفت.
-                                </div>--> 
+                        
                             </div>
                         </div>
                         <div class="accordion-item">
@@ -286,6 +283,7 @@
 </body>
 
 </html>
+
 
 
 
