--- a/contact.html
+++ b/contact.html
@@ -136,8 +136,12 @@
                     <div class="card shadow">
                         <div class="card-body p-5">
                             <h3 class="text-center mb-4">فرم تماس با ما</h3>
-                            <form name="contact" id="contactForm" method="POST" netlify >
-                                
+                            <form 
+                                id="contactForm" 
+                                name="contact-form" 
+                                method="POST" 
+                                data-netlify="true"  >
+                                <input type="hidden" name="form-name" value="contact-form">
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="name" class="form-label">نام و نام خانوادگی</label>
@@ -283,6 +287,7 @@
 </body>
 
 </html>
+
 
 
 
