--- a/contact.html
+++ b/contact.html
@@ -129,38 +129,49 @@
     </section>
 
     <!-- بخش فرم تماس -->
-    <section class="contact-form-section py-5 bg-light">
+     <section class="contact-form-section py-5 bg-light">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <div class="card shadow">
                         <div class="card-body p-5">
                             <h3 class="text-center mb-4">فرم تماس با ما</h3>
-                            <form id="contactForm" name="contact-form" method="POST" data-netlify="true" onSubmit="submit">
+                            <form 
+                                id="contactForm" 
+                                name="contact-form" 
+                                method="POST" 
+                                data-netlify="true"
+                                netlify-honeypot="bot-field"
+                            >
+                                <!-- فیلد مخفی برای Netlify -->
                                 <input type="hidden" name="form-name" value="contact-form">
+                                <p class="d-none">
+                                    <label>این فیلد را خالی بگذارید: <input name="bot-field"></label>
+                                </p>
+                                
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
-                                        <label for="name" class="form-label">نام و نام خانوادگی</label>
-                                        <input type="text" name="name" class="form-control"  required>
+                                        <label for="name" class="form-label">نام و نام خانوادگی *</label>
+                                        <input type="text" class="form-control" id="name" name="name" required>
                                     </div>
                                     <div class="col-md-6 mb-3">
-                                        <label for="email" class="form-label" >ایمیل</label>
-                                        <input type="email" class="form-control" name="email" id="email" required>
+                                        <label for="email" class="form-label">ایمیل *</label>
+                                        <input type="email" class="form-control" id="email" name="email" required>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="phone" class="form-label">تلفن تماس</label>
-                                        <input type="tel" class="form-control" name="tel" id="tel">
+                                        <input type="tel" class="form-control" id="phone" name="phone">
                                     </div>
                                     <div class="col-md-6 mb-3">
                                         <label for="company" class="form-label">نام شرکت</label>
-                                        <input type="text" class="form-control" name="company" id="company">
+                                        <input type="text" class="form-control" id="company" name="company">
                                     </div>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="subject" class="form-label">موضوع</label>
-                                    <select class="form-select" name="choice" id="subject"  required>
+                                    <label for="subject" class="form-label">موضوع *</label>
+                                    <select class="form-select" id="subject" name="subject" required>
                                         <option value="" selected disabled>انتخاب موضوع</option>
                                         <option value="product">استعلام محصول</option>
                                         <option value="service">درخواست خدمات</option>
@@ -170,11 +181,13 @@
                                     </select>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="message" class="form-label">پیام</label>
+                                    <label for="message" class="form-label">پیام *</label>
                                     <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
                                 </div>
                                 <div class="text-center">
-                                    <button type="submit" class="btn btn-primary btn-lg">ارسال پیام</button>
+                                    <button type="submit" class="btn btn-primary btn-lg">
+                                        <i class="fas fa-paper-plane me-2"></i>ارسال پیام
+                                    </button>
                                 </div>
                             </form>
                         </div>
@@ -283,6 +296,7 @@
 </body>
 
 </html>
+
 
 
 
