--- a/contact.html
+++ b/contact.html
@@ -137,30 +137,38 @@
                     <div class="card shadow">
                         <div class="card-body p-5">
                             <h3 class="text-center mb-4">فرم تماس با ما</h3>
-                            <form id="contactForm">
+                            <form 
+                                id="contactForm" 
+                                name="contact-form" 
+                                method="POST" 
+                                data-netlify="true"
+                                netlify-honeypot="bot-field"
+                            >
+                                <!-- فیلد مخفی برای Netlify -->
+                                <input type="hidden" name="form-name" value="contact-form">
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="name" class="form-label">نام و نام خانوادگی</label>
-                                        <input type="text" class="form-control" id="name" required>
+                                        <input type="text" name="name" class="form-control" id="name" required>
                                     </div>
                                     <div class="col-md-6 mb-3">
                                         <label for="email" class="form-label">ایمیل</label>
-                                        <input type="email" class="form-control" id="email" required>
+                                        <input type="email" name="email" class="form-control" id="email" required>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="phone" class="form-label">تلفن تماس</label>
-                                        <input type="tel" class="form-control" id="phone">
+                                        <input type="tel" name="tel" class="form-control" id="phone">
                                     </div>
                                     <div class="col-md-6 mb-3">
                                         <label for="company" class="form-label">نام شرکت</label>
-                                        <input type="text" class="form-control" id="company">
+                                        <input type="text" name="company" class="form-control" id="company">
                                     </div>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="subject" class="form-label">موضوع</label>
-                                    <select class="form-select" id="subject" required>
+                                    <label for="subject"  class="form-label">موضوع</label>
+                                    <select class="form-select" id="subject" name="subject" required>
                                         <option value="" selected disabled>انتخاب موضوع</option>
                                         <option value="product">استعلام محصول</option>
                                         <option value="service">درخواست خدمات</option>
@@ -171,7 +179,7 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="message" class="form-label">پیام</label>
-                                    <textarea class="form-control" id="message" rows="5" required></textarea>
+                                    <textarea class="form-control" id="message" rows="5" name="message" required></textarea>
                                 </div>
                                 <div class="text-center">
                                     <button type="submit" class="btn btn-primary btn-lg">ارسال پیام</button>
@@ -284,3 +292,4 @@
     
 </body>
 </html>
+
