--- a/contact.html
+++ b/contact.html
@@ -271,10 +271,15 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/contact.js"></script>
+
     
 </body>
 </html>
+
 
 
 
