--- a/contact.html
+++ b/contact.html
@@ -143,7 +143,7 @@
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="name" class="form-label">نام و نام خانوادگی</label>
-                                        <input type="text" name="name" class="form-control" id="name" required>
+                                        <input type="text" name="Fullname" class="form-control" id="name" required>
                                     </div>
                                     <div class="col-md-6 mb-3">
                                         <label for="email" class="form-label">ایمیل</label>
@@ -250,6 +250,7 @@
     
 </body>
 </html>
+
 
 
 
