--- a/contact.html
+++ b/contact.html
@@ -170,7 +170,7 @@
                             <h3 class="text-center mb-4">فرم تماس با ما</h3>
                             
                             <!-- فرم Netlify ساده و تمیز -->
-                            <form name="contact" method="POST" netlify data-netlify="true" id="contactForm">
+                            <form name="contact" method="POST" netlify data-netlify="true" id="contactForm" action="/success">
                                 <input type="hidden" name="form-name" value="contact">
                                 
                                 <div class="row">
@@ -446,3 +446,4 @@
     </script>
 </body>
 </html>
+
