--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
     </div>
 
     <!-- نوار ناوبری -->
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="پتروآدراسیا" height="50">
