--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="contact-info">
-                        <span><i class="fas fa-phone"></i> 021-12345678</span>
+                        <span><i class="fas fa-phone"></i> 09140513427</span>
                         <span><i class="fas fa-envelope"></i> petroazarasia23@gmail.com</span>
                     </div>
                 </div>
@@ -139,8 +139,8 @@
                                 <i class="fas fa-phone"></i>
                             </div>
                             <h5>تلفن</h5>
-                            <p>۰۲۱-۱۲۳۴۵۶۷۸</p>
-                            <p>۰۲۱-۸۷۶۵۴۳۲۱</p>
+                            <p>09140513427</p>
+                            <p>09140513427</p>
                         </div>
                     </div>
                 </div>
@@ -151,8 +151,8 @@
                                 <i class="fas fa-envelope"></i>
                             </div>
                             <h5>ایمیل</h5>
-                            <p>info@petroadrasia.com</p>
-                            <p>sales@petroadrasia.com</p>
+                            <p>petroazaasia23@gmail.com</p>
+                            <p>petroazaasia23@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -446,3 +446,4 @@
     </script>
 </body>
 </html>
+
