--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             transition: all 0.3s ease;
         }
         
-        .btn-primary:hover {
+        .btn-primary {
             transform: translateY(-2px);
             box-shadow: 0 5px 15px rgba(139, 0, 0, 0.3);
         }
@@ -446,4 +446,5 @@
     </script>
 </body>
 </html>
+
 
