--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         }
         
         .btn-primary {
-            background: linear-gradient(45deg, var(--petro-burgundy), var(--petro-orange));
+          /* background: linear-gradient(45deg, var(--petro-burgundy), var(--petro-orange));*/
             border: none;
             padding: 12px 30px;
             font-weight: 600;
@@ -446,5 +446,6 @@
     </script>
 </body>
 </html>
+
 
 
