--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         }
         
         .btn-primary {
-            transform: translateY(-2px);
+          //  transform: translateY(-2px);
             box-shadow: 0 5px 15px rgba(139, 0, 0, 0.3);
         }
         
@@ -446,6 +446,7 @@
     </script>
 </body>
 </html>
+
 
 
 
