--- a/contact.html
+++ b/contact.html
@@ -307,7 +307,7 @@
                         <li><i class="fas fa-map-marker-alt"></i> تهران، خیابان ولیعصر، پلاک ۱۰۰۰</li>
                         <li><i class="fas fa-phone"></i> 021-12345678</li>
                         <li><i class="fas fa-fax"></i> 021-87654321</li>
-                        <li><i class="fas fa-envelope"></i> info@petroadrasia.com</li>
+                        <li><i class="fas fa-envelope"></i> petroazarasia23@gmail.petroadrasia</li>
                     </ul>
                 </div>
             </div>
@@ -446,6 +446,7 @@
     </script>
 </body>
 </html>
+
 
 
 
